--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -5,56 +5,131 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>My Blog</title>
+  <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <style>
-    .wrapper{
-      background-color: #fafafa;
-      box-shadow: 0 0 2px 4px gray;
+    .container {
+      background-color: #fff;
+      box-shadow: 0 0 4px 1px grey;
       width: 60%;
       margin: auto;
-      
+      margin-top: 5%;
+      padding 12px;
+    }
+    .title {
+      background-color-#fff;
+      color: darkblue;
+      text-align: center;
+      padding: 8px;
     }
 
+    #programming-languages {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    #programming-languages td,
+    #programming-languages th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+
+    #programming-languages tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    #programming-languages tr:hover {
+      background-color: #ddd;
+    }
+
+    #programming-languages th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #4CAF50;
+      color: white;
+    }
+
+    #programming-languages {
+      font-family: Arial, Helvetica, sans-serif;
+      border-collapse: collapse;
+      width: 100%;
+    }
+
+    #programming-languages td,
+    #programming-languages th {
+      border: 1px solid #ddd;
+      padding: 8px;
+    }
+
+    #programming-languages tr:nth-child(even) {
+      background-color: #f2f2f2;
+    }
+
+    #programming-languages tr:hover {
+      background-color: #ddd;
+    }
+
+    #programming-languages th {
+      padding-top: 12px;
+      padding-bottom: 12px;
+      text-align: left;
+      background-color: #4CAF50;
+      color: white;
+    }
   </style>
 </head>
 
 <body>
-  <h1>My Rails Articles</h1>
-<div class="wrapper">
-  <table class="table">
-    <thead>
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">Title</th>
-        <th scope="col">Body</th>
-        <th scope="col">Created At</th>
-        <th scope="col">Updated At</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% @articles.each do |article| %>
-        <tr>
-          <th scope="row">
-            <%= article.id %>
-          </th>
-          <td>
-            <%= article.title %>
-          </td>
-          <td>
-            <%= article.body %>
-          </td>
-          <td>
-            <%= article.created_at %>
-          </td>
-          <td>
-            <%= article.updated_at %>
-          </td>
-        </tr>
-        <% end %>
-    </tbody>
-  </table>
-</div>
+  <div class="container">
+    <div class="row">
+
+      <div class="title">
+        <h2>My Rails Articles</h2>
+      </div>
+
+      <hr />
+      
+      <%= link_to "New Article" , new_article_path %>
+    
+        <table id="programming-languages">
+          <thead class="table-dark">
+            <tr>
+              <th scope="col">#</th>
+              <th scope="col">Title</th>
+              <th scope="col">Body</th>
+              <th scope="col">Created At</th>
+              <th scope="col">Updated At</th>
+            </tr>
+          </thead>
+          <tbody>
+            <% @articles.each do |article| %>
+              <tr>
+                <th scope="row">
+                  <%= article.id %>
+                </th>
+                <td>
+                  <a href="/articles/<%= article.id %>">
+                    <%= article.title %>
+                  </a>
+                </td>
+                <td>
+                  <%= article.body %>
+                </td>
+                <td>
+                  <%= article.created_at %>
+                </td>
+                <td>
+                  <%= article.updated_at %>
+                </td>
+              </tr>
+              <% end %>
+          </tbody>
+        </table>
+
+    </div>
+  </div>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
