--- a/app/views/articles/index.htm
+++ b/app/views/articles/index.htm
@@ -11,16 +11,14 @@
   <style>
     .wrapper {
       margin-top: 5%;
-      background-color: #fafafa;
-      box-shadow: 0 0 3px 3px gainsboro;
+      background-color: #fff;
+      box-shadow: 0 0 2px 2px gainsboro;
       width: 80%;
       margin: auto;
-
-
     }
-
     .title {
       color: darkslategrey;
+      background-color: deeppink;
       font-family: sans-serif;
       padding: 9px;
       margin: auto;
@@ -78,32 +76,91 @@
       <tbody>
         <% @articles.each do |article| %>
           <tr>
-            <th scope="row">
-              <%= article.id %>
-            </th>
-            <td>
-              <%= article.title %>
-            </td>
-            <td>
-              <%= article.body %>
-            </td>
-            <td>
-              <%= article.created_at %>
-            </td>
-            <td>
-              <%= article.updated_at %>
-            </td>
+            <th  <%= article.id %> </th>
+            <td> <%= article.title %> </td>
+            <td> <%= article.body %>  </td>
+            <td> <%= article.created_at %> </td>
+            <td> <%= article.updated_at %> </td>
           </tr>
           <% end %>
       </tbody>
     </table>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
 
 </html>
 
 
+
+.container {
+  background-color: #fff;
+  box-shadow: 0 0 4px 1px grey;
+  width: 60%;
+  margin: auto;
+  margin-top: 5%;
+  padding 12px;
+}
+.title {
+  background-color-#fff;
+  color: darkblue;
+  text-align: center;
+  padding: 8px;
+}
+
+#programming-languages {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#programming-languages td,
+#programming-languages th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#programming-languages tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#programming-languages tr:hover {
+  background-color: #ddd;
+}
+
+#programming-languages th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
+
+#programming-languages {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 100%;
+}
+
+#programming-languages td,
+#programming-languages th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#programming-languages tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#programming-languages tr:hover {
+  background-color: #ddd;
+}
+
+#programming-languages th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #4CAF50;
+  color: white;
+}
