--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -7,81 +7,79 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <link rel="stylesheet" href="./index.css">
   <style>
+    #main-header {
+      padding: 2rem 2rem;
+      background: #ff0055;
+      color: white;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+      text-align: center;
+    }
     .container {
       background-color: #fff;
-      box-shadow: 0 0 4px 1px grey;
       width: 60%;
       margin: auto;
-      margin-top: 5%;
-      padding 12px;
+      margin-top: 3%;
+      padding: 12px;
     }
     .title {
-      background-color-#fff;
+      background-color: #fff;
       color: darkblue;
+      color: #dc3545;
+      color: #212529;
       text-align: center;
       padding: 8px;
     }
-
-    #programming-languages {
-      font-family: Arial, Helvetica, sans-serif;
+    .article {
       border-collapse: collapse;
-      width: 100%;
+      margin: 25px 0;
+      font-size: 0.9em;
+      font-family: sans-serif;
+      min-width: 400px;
+      box-shadow: 0 1px 6px 3px rgb(0 0 0 / 30%);
     }
-
-    #programming-languages td,
-    #programming-languages th {
-      border: 1px solid #ddd;
-      padding: 8px;
-    }
-
-    #programming-languages tr:nth-child(even) {
-      background-color: #f2f2f2;
-    }
-
-    #programming-languages tr:hover {
-      background-color: #ddd;
-    }
-
-    #programming-languages th {
-      padding-top: 12px;
-      padding-bottom: 12px;
+    .article thead tr {
+      background-color: #055160;;
+      color: #ffffff;
       text-align: left;
-      background-color: #4CAF50;
-      color: white;
+    }
+    .article th,
+    .article td {
+      padding: 12px 15px;
+    }
+    .article tbody tr {
+      border-bottom: 1px solid #dddddd;
     }
 
-    #programming-languages {
-      font-family: Arial, Helvetica, sans-serif;
-      border-collapse: collapse;
-      width: 100%;
+    .article tbody tr:nth-of-type(even) {
+      background-color: #f3f3f3;
     }
-
-    #programming-languages td,
-    #programming-languages th {
-      border: 1px solid #ddd;
-      padding: 8px;
+    .article tbody tr:last-of-type {
+      border-bottom: 2px solid #009879;
     }
-
-    #programming-languages tr:nth-child(even) {
-      background-color: #f2f2f2;
+    .article tbody tr.active-row {
+      font-weight: bold;
+      color: #009879;
     }
-
-    #programming-languages tr:hover {
-      background-color: #ddd;
+    a {
+      text-decoration: none;
+      font-weight: bold;
     }
-
-    #programming-languages th {
-      padding-top: 12px;
-      padding-bottom: 12px;
-      text-align: left;
-      background-color: #4CAF50;
-      color: white;
+    .add-article {
+      padding: 10px;
+    }
+    .add-article a {
+      color: #fff;
     }
   </style>
 </head>
 
 <body>
+
+  <header id="main-header">
+    <h1>Welcome to My Rails Blog!</h1>
+  </header>
   <div class="container">
     <div class="row">
 
@@ -90,47 +88,51 @@
       </div>
 
       <hr />
-      
-      <%= link_to "New Article" , new_article_path %>
-    
-        <table id="programming-languages">
-          <thead class="table-dark">
+      <div class="add-article">
+        <button class="btn btn-danger">
+          <%= link_to "New Article" , new_article_path %>
+        </button>
+      </div>
+      <table class="article">
+        <thead class="table-dark">
+          <tr>
+            <th scope="col">#</th>
+            <th scope="col">Title</th>
+            <th scope="col">Body</th>
+            <th scope="col">Created At</th>
+            <th scope="col">Updated At</th>
+          </tr>
+        </thead>
+        <tbody>
+          <% @articles.each do |article| %>
             <tr>
-              <th scope="col">#</th>
-              <th scope="col">Title</th>
-              <th scope="col">Body</th>
-              <th scope="col">Created At</th>
-              <th scope="col">Updated At</th>
+              <th scope="row">
+                <%= article.id %>
+              </th>
+              <td>
+                <a href="/articles/<%= article.id %>">
+                  <%= article.title %>
+                </a>
+              </td>
+              <td>
+                <%= article.body %>
+              </td>
+              <td>
+                <%= article.created_at %>
+              </td>
+              <td>
+                <%= article.updated_at %>
+              </td>
             </tr>
-          </thead>
-          <tbody>
-            <% @articles.each do |article| %>
-              <tr>
-                <th scope="row">
-                  <%= article.id %>
-                </th>
-                <td>
-                  <a href="/articles/<%= article.id %>">
-                    <%= article.title %>
-                  </a>
-                </td>
-                <td>
-                  <%= article.body %>
-                </td>
-                <td>
-                  <%= article.created_at %>
-                </td>
-                <td>
-                  <%= article.updated_at %>
-                </td>
-              </tr>
-              <% end %>
-          </tbody>
-        </table>
+            <% end %>
+        </tbody>
+      </table>
 
     </div>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
+    crossorigin="anonymous"></script>
 
 </body>
 
