--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,5 +1,64 @@
-<h1>Article<h1>
+<!DOCTYPE html>
+<html lang="en">
 
-<h1><%= @article.title %></h1>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Article</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  <style>
+    #main-header {
+      padding: 2rem 2rem;
+      background: #ff0055;
+      color: white;
+      box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+      text-align: center;
+    }
+    .article-card {
+      width: 30%;
+      margin: auto;
+      margin-top: 5%;
+      border: 1px solid whitesmoke;
+      padding: 21px;
+      box-shadow: 10px 5px 30px 3px gainsboro;
+      border-radius: 8px;
+      background-color: #f8f9fa;
+    }
+    .article-body {
+      font-family: Verdana, Geneva, Tahoma, sans-serif;
+    }
+    .main-title {
+      text-align: center;
+    }
+    .main-title span {
+      color: red;
+      font-style: italic;
+    }
+  </style>
+</head>
 
-<p><%= @article.body %></p>
+<body>
+
+  <header id="main-header">
+    <h1>Welcome to My Rails Blog!</h1>
+  </header>
+
+  <div class="article-card">
+    <div class="main-title">
+      <p> <span>
+          <%= @article.title %>
+        </span> Article </p>
+    </div>
+    <hr />
+
+    <div class="article-body">
+      <p>
+        <%= @article.body %>
+      </p>
+    </div>
+  </div>
+</body>
+
+</html>
