--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -6,8 +6,9 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
   <link rel="stylesheet" href="./index.css">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous">
+  
   <style>
     #main-header {
       padding: 2rem 2rem;
@@ -16,12 +17,8 @@
       box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
       text-align: center;
     }
-    .container {
-      background-color: #fff;
-      width: 60%;
-      margin: auto;
+    .container {     
       margin-top: 3%;
-      padding: 12px;
     }
     .title {
       background-color: #fff;
@@ -81,7 +78,7 @@
     <h1>Welcome to My Rails Blog!</h1>
   </header>
   <div class="container">
-    <div class="row">
+    
 
       <div class="title">
         <h2>My Rails Articles</h2>
@@ -99,8 +96,8 @@
             <th scope="col">#</th>
             <th scope="col">Title</th>
             <th scope="col">Body</th>
-            <th scope="col">Created At</th>
-            <th scope="col">Updated At</th>
+            <th scope="col">CreatedAt</th>
+            <th scope="col">UpdatedAt</th>
           </tr>
         </thead>
         <tbody>
@@ -128,11 +125,9 @@
         </tbody>
       </table>
 
-    </div>
+    
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4"
-    crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous"></script>
 
 </body>
 
