--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -33,7 +33,8 @@
       text-align: center;
     }
     .main-title span {
-      color: red;
+      color: gray;
+      font-size: 24px;
       font-style: italic;
     }
   </style>
@@ -49,7 +50,7 @@
     <div class="main-title">
       <p> <span>
           <%= @article.title %>
-        </span> Article </p>
+        </span> </p>
     </div>
     <hr />
 
